Updated the Javadoc overview to discuss why the "classic" version should only be used if someone is trying to run examples from Filthy Rich Clients.

--- a/timingframework-classic/javadoc-overview.html
+++ b/timingframework-classic/javadoc-overview.html
@@ -20,8 +20,15 @@ powerful animations in your Java applications.</p>
 <p>The Timing Framework was implemented by Chet Haase and introduced in the book
 <i>Filthy Rich Clients</i> (Haase and Guy, Addison-Wesley, 2008).</p>
 
-<p>This version of the Timing Framework has the API described
-<i>Filthy Rich Clients</i>.
+<p>This "classic" version of the Timing Framework has the API described
+<i>Filthy Rich Clients</i>. It is not actively maintained and is only provided
+only as a historical curio for folks who are trying out the examples in the book.
+
+<p><i>DO NOT USE THIS VERSION FOR NEW DEVELOPMENT!</i>
+
+<p>Why? Newer releases of the library solve a problem with the Swing timer that
+was discussed in Chet's JavaOne 2008 talk, are multi-thread safe, go faster, use
+less memory, support both Swing and SWT, and have an improved API.
 
 <p>The original Timing Framework implementation was released under the
 following terms:
